--- a/index.html
+++ b/index.html
@@ -7,8 +7,106 @@
     <title>Document</title>
     <!--Style-->
     <link rel="stylesheet" href="./css/main.css">
+    <!--fonts-->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!--header-->
+    <header class="hard-title">
+
+        <h1>
+            Memory game
+        </h1>
+
+    </header>
+
+    <!--main content with 3 section and 4 div inside-->
+    <main>
+
+        <section class="cards-container">
+
+                <!-- first div-->
+            <div class="card">
+                <div class="layer">
+
+                </div>
+            </div>
+
+                <!--second div-->
+            <div>
+
+            </div>
+
+                <!--third div-->
+            <div>
+
+            </div>
+
+                <!--forth div-->
+            <div>
+
+            </div>
+
+        </section>
+
+        <!--second section-->
+        <section>
+
+                <!-- first div-->
+            <div>
+
+            </div>
+
+                <!--second div-->
+            <div>
+
+            </div>
+
+                <!--third div-->
+            <div>
+
+            </div>
+
+                <!--forth div-->
+            <div>
+
+            </div>
+
+        </section>
+
+        <!--third section-->
+        <section>
+
+            <!-- first div-->
+            <div>
+
+            </div>
+
+                <!--second div-->
+            <div>
+
+            </div>
+
+                <!--third div-->
+            <div>
+
+            </div>
+
+                <!--forth div-->
+            <div>
+
+            </div>
+
+         </section>
+    </main>
+
+    <!--small footer-->
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
