centralize text under hover img

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="card">
 
                 <h2>
-                    Bycycle
+                    Bicycle
                 </h2>
 
                 <div class="layer">
@@ -133,7 +133,7 @@
         <!--third Row of cards-->
         <section class="cards-container clearfix">
 
-            <!-- first div-->
+            <!-- first car-->
             <div class="card">
 
                 <h2>
@@ -145,7 +145,7 @@
                 </div>
             </div>
 
-            <!--second div-->
+            <!--second card-->
                 
             <div class="card">
 
@@ -158,11 +158,11 @@
                 </div>
             </div>
 
-            <!--third div-->
+            <!--third card-->
             <div class="card">
 
                 <h2>
-                    Air Bicycle
+                    Bicycle
                 </h2>
 
                 <div class="layer">
@@ -170,7 +170,7 @@
                 </div>
             </div>
 
-            <!--forth div-->
+            <!--forth card-->
             <div class="card">
 
                 <h2>
